Don't emit debug info that triggers a gdb internal error.

PR c++/20805
* dwarf2out.c (gen_variable_die): Don't emit a specification if this
is another declaration.

From-SVN: r98590